--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@
   --border-color: #eeeeee;
   --main-font: 'Roboto', sans-serif;
   --logo-font: 'Raleway', sans-serif;
-  --hero-background-color: #C4C4C4;
-  --icon-color: #AFB1B8;
+  --hero-background-color: #c4c4c4;
+  --icon-color: #afb1b8;
+  --footer-icon-color: rgba(255, 255, 255, 0.1);
 }
 
 body {
@@ -79,7 +80,6 @@ img {
 .top > .container {
   display: flex;
   align-items: center;
-  
 }
 
 .top-nav {
@@ -145,20 +145,20 @@ img {
   display: block;
   content: '';
   background-image: url(../images/1envelope.svg);
- 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 16px 12px;
-    margin-right: 10px;
-    height: 12px;
-    background-color: red;    
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px 12px;
+  margin-right: 10px;
+  height: 12px;
+  background-color: red;
 }
 
 .phone::before {
   display: block;
   content: '';
   background-image: url(../images/1smartphone.svg);
-  
+
   background-position: center;
   background-repeat: no-repeat;
   margin-right: 10px;
@@ -172,11 +172,11 @@ img {
   padding: 200px 0;
   background-color: var(--hero-background-color);
   text-align: center;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
 }
 
 .hero-title {
@@ -232,7 +232,7 @@ img {
 }
 
 .advantages-item {
-  width: calc((100%-3*30px) / 4);
+  width: calc((100%-3 * 30px) / 4);
 }
 
 .advantages-item:not(:last-child) {
@@ -248,8 +248,6 @@ img {
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--semi-light-background-color);
-  
-  
 }
 
 .advantages-item:nth-child(1)::before {
@@ -259,7 +257,7 @@ img {
 .advantages-item:nth-child(2)::before {
   background-image: url(../images/clock.svg);
 }
-  
+
 .advantages-item:nth-child(3)::before {
   background-image: url(../images/diagram.svg);
 }
@@ -367,16 +365,26 @@ img {
 
 .soc-link {
   display: flex;
-  background-color: var(--accent-color);
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
-
 }
 
+.soc-icon {
+  fill: var(--icon-color);
+}
+
+.soc-link:hover,
+.soc-link:focus {
+  background-color: var(--accent-color);
+}
+.soc-link:hover .soc-icon,
+.soc-link:focus .soc-icon {
+  fill: var(--light-text-color);
+}
 /* -----------------CLIENTS-------------------- */
 
 .clients-list {
@@ -386,7 +394,6 @@ img {
 
 .clients-item {
   width: calc((100% - 5 * 30px) / 6);
-   
 }
 
 .clients-link {
@@ -396,7 +403,13 @@ img {
   border-radius: 4px;
   align-items: center;
   justify-content: center;
+  fill: var(--icon-color);
+}
 
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  fill: var(--accent-color);
 }
 
 /* -----------------FOOTER-------------------- */
@@ -443,12 +456,12 @@ img {
 
 .call {
   font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--light-text-color);
-    margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--light-text-color);
+  margin-bottom: 20px;
 }
 
 .footer-address {
@@ -457,13 +470,22 @@ img {
 
 .footer-soc-link {
   display: flex;
-    background-color: var(--accent-color);
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-repeat: no-repeat;
-    align-items: center;
-    justify-content: center;
+  background-color: var(--footer-icon-color);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-soc-icon {
+  fill: var(--light-text-color);
 }
 
 /* ======================PORTFOLIO===================== */
@@ -512,6 +534,12 @@ img {
   width: calc((100% - 30 * 2) / 3);
 }
 
+.project > .item:hover,
+.project > .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .project-caption {
   border: 1px solid var(--border-color);
   border-top: transparent;
@@ -532,4 +560,3 @@ img {
   line-height: 1.88;
   color: var(--main-text-color);
 }
-
