--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,6 @@ img {
   margin-left: auto;
   margin-right: auto;
 
-  outline: 3px solid blueviolet;
 }
 
 .section {
@@ -124,9 +123,10 @@ img {
 }
 
 .header-contacts {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  align-items: center;
 
   font-weight: 500;
   line-height: 1.14;
@@ -141,31 +141,11 @@ img {
   color: var(--accent-color);
 }
 
-.mail::before {
-  display: block;
-  content: '';
-  background-image: url(../images/1envelope.svg);
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 16px 12px;
+.contacts-icon {
   margin-right: 10px;
-  height: 12px;
-  background-color: red;
+  fill: currentColor;
 }
 
-.phone::before {
-  display: block;
-  content: '';
-  background-image: url(../images/1smartphone.svg);
-
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-right: 10px;
-  background-size: 10px 16px;
-  height: 16px;
-  background-color: red;
-}
 /* -----------------HERO--------------------- */
 
 .hero {
@@ -176,7 +156,7 @@ img {
     url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -351,18 +331,6 @@ img {
   justify-content: center;
 }
 
-/* .soc-item {
-  display: flex;
-  background-color: var(--accent-color);
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-repeat: no-repeat;
-  align-items: center;
-  justify-content: center;
-  
-} */
-
 .soc-link {
   display: flex;
   width: 44px;
@@ -534,10 +502,9 @@ img {
   width: calc((100% - 30 * 2) / 3);
 }
 
-.project > .item:hover,
-.project > .item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+.project>.item:hover,
+.project>.item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-caption {
