--- a/css/styles.css
+++ b/css/styles.css
@@ -331,17 +331,19 @@ img {
   justify-content: center;
 }
 
-.soc-link {
-  display: flex;
+.soc-item {
   width: 44px;
   height: 44px;
+}
+
+.soc-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
-}
-
-.soc-icon {
   fill: var(--icon-color);
 }
 
@@ -362,11 +364,13 @@ img {
 
 .clients-item {
   width: calc((100% - 5 * 30px) / 6);
+  height: 92px;
 }
 
 .clients-link {
   display: flex;
-  height: 92px;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   align-items: center;
@@ -439,8 +443,8 @@ img {
 .footer-soc-link {
   display: flex;
   background-color: var(--footer-icon-color);
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-repeat: no-repeat;
   align-items: center;
@@ -502,8 +506,12 @@ img {
   width: calc((100% - 30 * 2) / 3);
 }
 
-.project>.item:hover,
-.project>.item:focus {
+.project-card {
+  display: block;
+}
+
+.project-card:hover,
+.project-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
